--- a/src/globals.css
+++ b/src/globals.css
@@ -1,5 +1,5 @@
 header{
-    height: 60px;
+    height: 70px;
     background-color: rgb(0, 0, 0);  
 }
 
@@ -8,26 +8,45 @@ body{
 }
 
 footer{
+  background-color: rgb(0, 0, 0);
+  width: 1537px;
+  height: 450px;
     position: fixed;
     bottom:0;
     left: 0;
 }
 
 #logo{
-   width: 32px;
-   height:30px;
+  width: 4%;
+  height: 2%;
+  margin-top: 4px;
+  margin-left: 7px;
 }
 
 .navbar-menu{
     display: flex;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   padding-left: 100px;
+  margin-top: -15px;
 }
 
 .navbar-menu li {
     cursor: pointer;
     padding:5px 10px;
     list-style: none;
+  }
+
+  .menu-sign{
+    display: flex;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  padding-left: 1370px;
+}
+
+  .menu-sign li{
+    cursor: pointer;
+    padding:5px 10px;
+    list-style: none;
+    margin-top: -50px;
   }
 
 
