--- a/src/globals.css
+++ b/src/globals.css
@@ -10,7 +10,7 @@ body{
 footer{
   background-color: rgb(0, 0, 0);
   width: 1537px;
-  height: 450px;
+  height: 350px;
     position: fixed;
     bottom:0;
     left: 0;
@@ -44,7 +44,7 @@ footer{
 
   .menu-sign li{
     cursor: pointer;
-    padding:5px 10px;
+    padding-right:15px;
     list-style: none;
     margin-top: -50px;
   }
@@ -59,3 +59,8 @@ li:hover{
     color: #C0C0C0;
   }
 
+.img-logo{
+  width: 20%;
+  height: 80%;
+  margin-top: -20px;
+}
