--- a/src/globals.css
+++ b/src/globals.css
@@ -10,7 +10,7 @@ body{
 footer{
   background-color: rgb(0, 0, 0);
   width: 1537px;
-  height: 350px;
+  height: 85px;
     position: fixed;
     bottom:0;
     left: 0;
@@ -46,7 +46,7 @@ footer{
     cursor: pointer;
     padding-right:15px;
     list-style: none;
-    margin-top: -50px;
+  
   }
 
 
@@ -60,7 +60,40 @@ li:hover{
   }
 
 .img-logo{
-  width: 20%;
-  height: 80%;
-  margin-top: -20px;
+  width: 4%;
+  height: 2%;
+  margin-top: 6px;
+  margin-left: 20px;
+}
+
+
+
+
+.pesquisar{
+  border: none;
+  margin-top: 15px;
+  width: 420px;
+  height: 25px;
+  padding-left: 15px;
+  border-radius: 4px;
+  line-height: 15px;
+  margin-left: 800px;
+  
+}
+
+.input-type{
+  margin-top: -60px;
+}
+
+.navbar-footer{
+  display: flex;
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+padding-left: 460px;
+margin-top: -15px;
+}
+
+.navbar-footer li {
+  cursor: pointer;
+  padding:5px 10px;
+  list-style: none;
 }
