--- a/src/globals.css
+++ b/src/globals.css
@@ -97,3 +97,10 @@ margin-top: -15px;
   padding:5px 10px;
   list-style: none;
 }
+
+#button{
+  background-color: grey;
+ width:80x;
+height: 40px;
+border-radius: 4px;
+}
