--- a/src/globals.css
+++ b/src/globals.css
@@ -98,9 +98,68 @@ margin-top: -15px;
   list-style: none;
 }
 
+#nome{
+  border-color: black;
+  border-radius: 4px;
+  height: 30px;
+ }
+
+ .label{
+  margin-right: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
+  font-size: 20px;
+  margin-top: 4%;
+}
+
+#telefone{
+  border-color: black;
+ border-radius: 4px;
+ height: 30px;
+}
+
+.label-type{
+  margin-right: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
+  font-size: 20px;
+}
+
 #button{
-  background-color: grey;
- width:80x;
-height: 40px;
-border-radius: 4px;
+  background-color: white;
+  width:170px;
+  height: 43px;
+  color: white;
+  border: 2px solid black;
+  border-radius: 8px;
+  font-family: Impact, 'fantasy';
+  font-size: 17px;
+  background-color: black;
+  margin-top: 35px;
+  margin-left: 610px 
+  }
+
+  .formulario{
+    background-color: blue;
+    border: 2px solid #A9A9A9;
+    min-width: 600px;
+    height: 450px;
+  }
+
+  #form-nome{
+    margin-left: 550px;
+    margin-top: 55px;
+  }
+
+  #form-tel{
+    margin-top: 30px;
+    margin-left: 530px;
+  }
+
+  #form{
+    width: 420px;
+    background: transparent;
+    border: 2px solid #A9A9A9;
+    backdrop-filter: blur(20px);
+    color: #fff;
+    border-radius: 10px;
+    padding: 30px 40px;
 }
