--- a/src/globals.css
+++ b/src/globals.css
@@ -102,6 +102,7 @@ margin-top: -15px;
   border-color: black;
   border-radius: 4px;
   height: 30px;
+  margin-top: 15px;
  }
 
  .label{
@@ -134,32 +135,25 @@ margin-top: -15px;
   font-size: 17px;
   background-color: black;
   margin-top: 35px;
-  margin-left: 610px 
+  margin-left: 30px; 
   }
 
   .formulario{
-    background-color: blue;
-    border: 2px solid #A9A9A9;
-    min-width: 600px;
-    height: 450px;
+    background-color: grey;
+    border: 4px solid #A9A9A9;
+    border-radius: 20px;
+    width: 450px;
+    height: 300px;
+    margin-left: 470px;
+    margin-top: 40px;
   }
 
   #form-nome{
-    margin-left: 550px;
+    margin-left: 70px;
     margin-top: 55px;
   }
 
   #form-tel{
     margin-top: 30px;
-    margin-left: 530px;
+    margin-left: 70px;
   }
-
-  #form{
-    width: 420px;
-    background: transparent;
-    border: 2px solid #A9A9A9;
-    backdrop-filter: blur(20px);
-    color: #fff;
-    border-radius: 10px;
-    padding: 30px 40px;
-}
